--- a/src/pages/SplashScreen.css
+++ b/src/pages/SplashScreen.css
@@ -1,14 +1,20 @@
 /* SplashScreen.css */
 .splash-screen {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #fff; /* Sesuaikan warna latar belakang sesuai kebutuhan */
-  }
-  
-  .splash-screen h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw; /* Set width to full viewport width */
+  height: 100vh; /* Set height to full viewport height */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.splash-screen h1 {
+  color: black;
+  font-size: 2rem;
+}
+
+/* Add more styles as needed */
